Note change in scontrol for next release.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.2.22 (IN PROGRESS
+=========================
+ -- scontrol getting more digits in job priority specification.
+
 * Changes in SLURM 0.2.21
 =========================
  -- Fixes for reported problems:
