Add --uid and --gid options to srun

--- a/trunk/doc/man/man1/squeue.1
+++ b/trunk/doc/man/man1/squeue.1
@@ -95,9 +95,13 @@ between 0.0 and 1.0
 .br
 \fB%T\fR Job state, extended form
 .br
-\fB%U\fR User id
+\fB%U\fR User ID
 .br
 \fB%u\fR User name
+.br
+\fB%G\fR Group ID
+.br
+\fB%g\fR Group name
 .br
 \fB%.<*>\fR right justification of the field
 .br 
