--- a/trunk/doc/man/man3/slurm_reconfigure.3
+++ b/trunk/doc/man/man3/slurm_reconfigure.3
@@ -1,6 +1,6 @@
-.TH "Slurm API" "3" "September 2003" "Morris Jette" "Slurm administrative calls"
+.TH "Slurm API" "3" "October 2003" "Morris Jette" "Slurm administrative calls"
 .SH "NAME"
-slurm_init_part_desc_msg,
+slurm_delete_partition, slurm_init_part_desc_msg,
 slurm_reconfigure, slurm_shutdown, slurm_update_job, 
 slurm_update_node, slurm_update_partition
 \- Slurm administrative functions 
@@ -34,6 +34,12 @@ int \fBslurm_update_node\fR (
 .br 
 );
 .LP
+int \fBslurm_delete_partition\fR ( 
+.br 
+	delete_part_msg_t *\fIdelete_part_msg_ptr\fP 
+.br 
+);
+.LP
 int \fBslurm_update_partition\fR ( 
 .br 
 	update_part_msg_t *\fIupdate_part_msg_ptr\fP 
@@ -44,6 +50,10 @@ int \fBslurm_update_partition\fR (
 .TP 
 \fIcore\fP
 Generate a core file if value is non-zero.
+.TP 
+\fIdelete_part_msg_ptr\fP
+Specifies the pointer to a partition delete request specification. See slurm.h for 
+full details on the data structure's contents. 
 .TP
 \fIupdate_job_msg_ptr\fP
 Specifies the pointer to a job update request specification. See slurm.h for full 
@@ -57,6 +67,10 @@ details on the data structure's contents.
 Specifies the pointer to a partition update request specification. See slurm.h for 
 full details on the data structure's contents. 
 .SH "DESCRIPTION"
+.LP 
+\fBslurm_delete_partition\fR Request that the specified partition be deleted. 
+All jobs associated with the identified partition will be terminated and purged.
+This function may only be successfully executed by user root.
 .LP 
 \fBslurm_init_part_desc_msg\fR Initialize the contents of a partition descriptor 
 with default values. Note: \fBslurm_init_part_desc_msg\fR is not equivalent to 
@@ -91,7 +105,7 @@ specified without changing the underlying node state. This might be used by some
 external system monitoring tool to inform the Slurm controller that a node has 
 become unusable.
 .LP 
-\fBslurm_update_part\fR Request that the configuration of a partition be updated. 
+\fBslurm_update_partition\fR Request that the configuration of a partition be updated. 
 Note that most, but not all parameters of a partition may be changed by this 
 function. Initialize the data structure using the \fBslurm_init_part_desc_msg\fR 
 function prior to setting values of the parameters to be changed. Note: 
@@ -137,6 +151,8 @@ int main (int argc, char *argv[])
 	update_node_msg_t update_node_msg;
 .br
 	partition_desc_msg_t update_part_msg ;
+.br
+	delete_part_msg_t delete_part_msg ;
 .LP 
 	if (slurm_reconfigure ( )) {
 .br
@@ -169,6 +185,16 @@ int main (int argc, char *argv[])
 	if (slurm_update_partition (&update_part_msg)) { 
 .br
 		slurm_perror ("slurm_update_partition error");
+.br 
+		exit (1);
+.br
+	}
+.LP 
+	delete_part_msg.name = "test.partition";
+.br 
+	if (slurm_delete_partition (&delete_part_msg)) { 
+.br
+		slurm_perror ("slurm_delete_partition error");
 .br 
 		exit (1);
 .br
