--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -93,10 +93,14 @@ The interval, in seconds, at which the SLURM controller tests the
 status of other daemons. The default value is 30 seconds.
 .TP
 \fBInactiveLimit\fR
-The interval, in seconds, a job is permitted to be inactive (with 
-no active job steps) before it is terminated. This prevents forgotten 
-jobs to be purged in a timely fashion without waiting for their time 
-limit to be reached. The default value is unlimited (zero). 
+The interval, in seconds, a job or job step is permitted to be inactive
+before it is terminated. A job or job step is considered inactive if 
+the associated srun command is not responding to slurm daemons. This 
+could be due to the termination of the srun command or the program 
+being is a stopped state. This limit permits defunct jobs to be purged 
+in a timely fashion without waiting for their time limit to be reached.
+This value should reflect the possibililty that the srun command may
+stopped a debugger. The default value is unlimited (zero). 
 .TP
 \fBJobCompLoc\fR
 Define the location where job completion records are to be logged. 
