Add new function to return end time for existing slurm job. Modify existing scontrol command to use it.

--- a/trunk/doc/man/man1/scontrol.1
+++ b/trunk/doc/man/man1/scontrol.1
@@ -61,9 +61,9 @@ Display a description of scontrol options and commands.
 \fIoneliner\fP
 Print information one line per record.
 .TP
-\fIpid2jid\fP \fIPROC_ID\fP
-Print the Slurm job id corresponding to the supplied process id, \fIPROC_ID\fP,
-on the current node.
+\fIpidinfo\fP \fIPROC_ID\fP
+Print the Slurm job id and scheduled termination time corresponding to the 
+supplied process id, \fIPROC_ID\fP, on the current node.
 .TP
 \fIping\fP
 Ping the primary and secondary slurmctld daemon and report if 
