--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -175,7 +175,8 @@ until a system administrator explicitly changes its state
 .TP
 \fBSlurmUser\fR
 The name of the user that the \fBslurmctld\fR daemon executes as. 
-For security purposes, a user other than "root" is recommended. 
+For security purposes, a user other than "root" is recommended.
+The default value is "root". 
 .TP
 \fBSlurmctldDebug\fR
 The level of detail to provide \fBslurmctld\fR daemon's logs. 
