Fix formatting error in KillWait.

--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -248,7 +248,7 @@ Fully qualified pathname of the file system available to user jobs for
 temporary storage. This parameter is used in establishing a node's \fBTmpDisk\fR space. 
 The default value is "/tmp".
 .TP
-\fBWaitTimefR
+\fBWaitTime\fR
 Specifies how many seconds the srun command should by default wait after 
 the first task terminates before terminating all remaining tasks. The 
 "--wait" option on the srun command line overrides this value. 
