--- a/branches/slurm-0-2-branch/NEWS
+++ b/branches/slurm-0-2-branch/NEWS
@@ -1,6 +1,15 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.2.22 (IN PROGRESS)
+=========================
+ -- Fixes for reported problems:
+   - slurm/326: Node stays in completing state indefinitely.
+   - slurm/328: slurmd uses different shared memory key on restart.
+   - slurm/329: Job processes may be left running when one task dies.
+ -- Allow more digits for priority values in scontrol.
+ -- 
+
 * Changes in SLURM 0.2.21
 =========================
  -- Fixes for reported problems:
