o revert change allowing slurmd debug level in srun to be set to DEBUG3.  o Modify srun(1) man page to reflect that, really, slurmd debug level    is only allowed to be set up to 4.

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -203,8 +203,8 @@ verbose operation. Multiple \fB-v\fR's will further increase the verbosity of
 .TP
 \fB\-d\fR, \fB\-\-slurmd-debug\fR=\fIlevel\fR
 Specify a debug level for slurmd(8). \fIlevel\fR may be an integer value
-between 0 [quiet, only errors are displayed] and 5 [insanely verbose
-operation]. The slurmd debug information is copied onto the stderr of
+between 0 [quiet, only errors are displayed] and 4 [verbose operation]. 
+The slurmd debug information is copied onto the stderr of
 the job. By default only errors are displayed. 
 .TP
 \fB\-W\fR, \fB\-\-wait\fR=\fIseconds\fR
