o update news for 0.2.22

--- a/branches/slurm-0-2-branch/NEWS
+++ b/branches/slurm-0-2-branch/NEWS
@@ -7,6 +7,7 @@ documents those changes that are of interest to users and admins.
    - slurm/326: Node stays in completing state indefinitely.
    - slurm/328: slurmd uses different shared memory key on restart.
    - slurm/329: Job processes may be left running when one task dies.
+   - slurm/334: slurmd segv with multiple simultaneous job steps.
  -- Allow more digits for priority values in scontrol.
  -- Applied various fixes for memory leaks.
  -- Remove logic preventing DPCS from allocating jobs with more than 
