Clarify how job signal function presently works given no step_id (it signals all job steps, but not the job script itself).

--- a/trunk/doc/man/man1/scancel.1
+++ b/trunk/doc/man/man1/scancel.1
@@ -1,4 +1,4 @@
-.TH SCANCEL "1" "October 2003" "scancel 0.3" "Slurm components"
+.TH SCANCEL "1" "November 2003" "scancel 0.3" "Slurm components"
 .SH "NAME"
 scancel \- Used to signal jobs or job steps that are under the control of Slurm.
 .SH "SYNOPSIS"
@@ -52,7 +52,7 @@ Print the version number of the scontrol command.
 ARGUMENTS
 .TP
 \fIjob_id\fP
-The Slurm job ID of the job to have one of its steps or the entire job signaled.
+The Slurm job ID of the job to have one or more of its steps signaled.
 .TP
 \fIstep_id\fP
 The step ID of the job step to be signaled. If none is provided, then 
