Add support for srun to forward cpu count per node to slurmd, which sets new environment variable SLURM_CPUS_ON_NODE for use by LAM/MPI. Also fixed bug in srun task distribution logic for block distribution in heterogeneous cluster.

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -568,6 +568,9 @@ will set some environment variables  in the environment of the
 executing tasks on the remote compute nodes. These environment variables
 are:
 .TP 20
+SLURM_CPUS_ON_NODE
+count of processors available to the job on this node
+.TP
 SLURM_JOBID
 job id of the executing job.
 .TP
