--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -68,7 +68,7 @@ of those partitions as the default.
 .TP
 \fB\-t\fR, \fB\-\-time\fR=\fIminutes\fR
 Establish a time limit to terminate the job after the specified number of 
-minutes. If the job's time limit exceed's the partition's time limit, the 
+minutes. If the job's time limit exceeds the partition's time limit, the 
 job will be left in a PENDING state. The default value is the partition's 
 time limit. When the time limit is reached, the job's processes are sent 
 SIGTERM followed by SIGKILL. The interval between signals is specified by 
